# fanciful

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  build.bash  conandata.yml  conanfile.txt  configure.bash  toolchain_env.zsh
cmake/: FindCppyy.cmake  FindLibClang.cmake  utilities.cmake
py/: interface.hpp  linkdef.hpp  selection.xml
py/tests/: test_fancy++.py
src/libfancy/impl/: formatter.cpp
src/libfancy/include/fancy/: fancy.hpp  formatter.hpp
